--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 @import "tailwindcss";
+@import "react-image-gallery/styles/css/image-gallery.css";
 
 body{
     font-family: 'Noto Sans KR', sans-serif;
